# student-score-management

./: .gitattributes  .gitignore  2.2025级-《C++编程实践》C++综合应用系统开发要求.docx  3.综合应用系统成绩评定答辩及提交存档材料说明-计信学院.docx  4.《C++编程实践》综合应用系统实践报告格式说明(模版)-计信学院.docx  CMakeLists.txt  README.md  现存的问题.md
.superpowers/brainstorm/90032-20260602191743/content/: final-design-v2.html  final-design.html  optimize-plan.html  simplify-plan.html  tech-breakdown.html  waiting.html
.superpowers/brainstorm/90032-20260602191743/state/: server-stopped
data/: checkins.json  classes.csv  classes.json  classes.txt  errors.json  exams.csv  exams.json  exams.txt  goals.json  grades.csv  grades.json  grades.txt  logs.json  logs.txt  points.json  students.csv  students.json  students.txt  subjects.csv  subjects.json  subjects.txt  users.csv  users.json  users.txt
docs/superpowers/plans/: 2026-06-03-project-refactor.md
docs/superpowers/specs/: 2026-06-02-optimize-design.md  2026-06-03-project-refactor-design.md
include/: auth.h  enhance.h  exam.h  extra.h  grade.h  handlers.h  models.h  server.h  sort.h  stats.h  storage.h  student.h  util.h  utils.h
src/: auth.cpp  core_part1_base.cpp  core_part2_storage.cpp  core_part3_logic.cpp  core_part4_handlers.cpp  enhance.cpp  exam.cpp  extra.cpp  grade.cpp  handlers.cpp  handlers_auth.cpp  handlers_grade.cpp  handlers_stu.cpp  main.cpp  models.cpp  server.cpp  sort.cpp  stats.cpp  storage.cpp  student.cpp  util.cpp  utils.cpp  utils_base.cpp  utils_json.cpp
web/: admin.html  home.html  index.html  login.html  parent.html  student.html  teacher.html
web/css/: home.css  style.css
web/js/: admin.js  api.js  common.js  student.js
